[bug #163054673]Add padding to modal and align address

--- a/UI/assets/css/meetup.css
+++ b/UI/assets/css/meetup.css
@@ -54,6 +54,13 @@
   margin-top: 10px;;
 }
 
+#askQuestionModal .modal-body{
+  padding: 15px 30px;
+}
+
+#askQuestionModal .modal-footer{
+  padding: 15px 30px;
+}
 #askQuestionModal textarea{
   resize: none;
 }
